--- a/dierenform.html
+++ b/dierenform.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Dieren</title>
 </head>
+<style>
+    body {
+        text-align: center;
+        background-color: red;
+    }
+</style>
 <body>
 <form action="dierform.php" method="POST">
     <select name="apen[]" multiple>
